Deleting *.user so it's propertly ignored by git. Adding launchSettings.json to gitignore and adding a sample file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # DTGE-specific ignores
 DTGEScenes/
 
+# User specific launch file
+launchSettings.json
+
+
 # Godot 4+ specific ignores
 .godot/
 
