--- a/DTGE.csproj
+++ b/DTGE.csproj
@@ -3,4 +3,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="addons\**" />
+    <EmbeddedResource Remove="addons\**" />
+  </ItemGroup>
 </Project>
